Name: foldm
Version: 1.0.5
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Michael Thompson, 2013 Gabriel Gonzalez
Author: Michael Thompson
Maintainer: what_is_it_to_do_anything@yahoo.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Foldl-Library/issues
Synopsis: Stock monadic left folds
Description: This library provides strict monadic left folds in the sense of the foldl library.
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Foldl-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4        && < 5   ,
        bytestring   >= 0.9.2.1  && < 0.11,
        primitive                   < 0.7 ,
        text         >= 0.11.2.0 && < 1.3 ,
        transformers >= 0.2.0.0  && < 0.5 ,
        vector       >= 0.7      && < 0.12,
        containers                  < 0.6 ,
        foldl        > 1.1       && < 1.3
    Exposed-Modules:
        Control.FoldM
    GHC-Options: -O2 -Wall

Benchmark benchmarks
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   benchmarks
    Main-Is:          Bench.hs
    GHC-Options:     -O2 -Wall -rtsopts -fno-warn-unused-do-bind

    Build-Depends:
        base      >= 4.4     && < 5  ,
        criterion >= 1.1.1.0 && < 1.2,
        foldl     >= 1.2.0   && < 1.3,
        foldm,
        vector       >= 0.7  && < 0.12,
        containers              < 6,
        pipes,
        streaming

--
Benchmark bench-applicative
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   benchmarks
    Main-Is:          BenchApplicative.hs
    GHC-Options:     -O2 -Wall -rtsopts -fno-warn-unused-do-bind

    Build-Depends:
        base      >= 4.4     && < 5  ,
        criterion >= 1.1.1.0 && < 1.2,
        foldl     >= 1.2.0   && < 1.3,
        foldm,
        vector       >= 0.7  && < 0.12,
        containers              < 6,
        pipes,
        streaming
        
        